--- a/styles/styles.css
+++ b/styles/styles.css
@@ -460,7 +460,6 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, #40531A, #7C9A55);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -573,6 +572,39 @@ h1 {
   }
   100% {
     transform: translateY(0px);
+  }
+}
+#leaves-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.leaf {
+  position: absolute;
+  top: -10%;
+  background-image: url("/assets/images/leaf-image.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  opacity: 0.6;
+  animation-name: fall;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes fall {
+  0% {
+    top: -10%;
+    transform: translateX(0) rotate(0deg);
+  }
+  100% {
+    top: 110%;
+    transform: translateX(20px) rotate(360deg);
   }
 }
 
